# py-geogebra

./: .gitignore  .main.py.swp  LICENSE  Makefile  POTFILES.in  README.md  baaaam.json  bisector.json  compile_translation.sh  gen_translation.sh  importing.sh  local.db-info  local.db-shm  local.db-wal  main.py  main.spec  messages.pot  pepr.json  py-geogebra.spec  pyproject.toml  requirements.txt  scene.json  scene_full.json  test.json  test2.json  vector.json  win-installer.py
.github/workflows/: build.yml
lib/: libcairo.2.dylib
py_geogebra/: app.py  globals.py  language.py  state.py  widgets.py
py_geogebra/flask/: app.py
py_geogebra/motions/: changing_screen_size.py  dragging.py  keybinds.py  motion.py  motions.py  mousewheel.py  pressing.py
py_geogebra/tools/: auth0_handler.py  auth_config.py  check_version.py  compute_runtime.py  db.py  fps_counter.py  language.py  load_svg.py  objects.py  offsets.py  token_manager.py  utils.py
py_geogebra/ui/: angle.py  angle_bisector.py  area.py  axes.py  best_fit_line.py  blank_point.py  circle_3_points.py  circle_center_point.py  circle_center_radius.py  circular_arc.py  circular_sector.py  circumcircular_arc.py  circumcircular_sector.py  compass.py  dialogs.py  free_hand.py  intersect.py  length.py  line.py  lower_label.py  menu_bar.py  midpoint_or_center.py  parallel_line.py  pen.py  perpendicular_bisector.py  perpendicular_line.py  point.py  point_on_object.py  polygon.py  polyline.py  ray.py  regular_polygon.py  segment.py  segment_with_lenght.py  semicircle.py  (+6 more)
tests/: test_app.py  test_toolbar.py  test_utils.py
(+7 files in other folders)
