[project]
name = "py-geogebra"
version = "0.1.0"
description = ""
authors = [
    {name = "brunovskyoliver",email = "obrunovsky7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "libsql (>=0.1.11,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
